# winter_game

./: .gitignore  LICENSE  README.md  To-do list.txt  colors  concept  pyproject.toml
src/: settings.txt
src/frost_forge/: __init__.py  __main__.py  game_state.py  rendering.py  settings.txt  settings_saving.py  update.py
src/frost_forge/info/: __init__.py  achievement.py  achievement_info.py  attribute_info.py  health_info.py  recipes_info.py  render.py  render_info.py  resistance_info.py  structure_gen_info.py  tile_info.py  tool_info.py  value_info.py  world_gen_info.py
src/frost_forge/other_systems/: game_saving.py  game_state.py  rendering.py  settings_saving.py  tile_placable.py  tile_placement.py  update.py  walk.py
src/frost_forge/render/: __init__.py  menu_rendering.py  menu_text.py  tile_rendering.py  ui_rendering.py
src/frost_forge/tile_systems/: dungeon_structuring.py  room_generation.py  serialize.py  tile_class.py  (+3 more)
src/saves/: autosave_0.0.txt  autosave_0.txt  autosave_1.0.txt  autosave_1.txt  autosave_2.0.txt  autosave_2.txt  autosave_3.0.txt  autosave_3.txt  playtest.txt  skies.txt  sky.txt  test.txt  timo.txt
src/winter_game/: UI_rendering.py  __init__.py  __main__.py  crafting_system.py  game_state.py  game_updates.py  health_info.py  left_click_updates.py  light.py  menu_rendering.py  menu_updates.py  mouse_update.py  options.py  player_move.py  recipes_info.py  rendering.py  right_click_updates.py  room_generation.py  serialize.py  tile_class.py  tile_info.py  tile_rendering.py  tile_updates.py  update.py  world_generation.py
(+182 files in other folders)
